# polkadot-starship

./: .gitignore  README.md  config.rb  default-dashboard.json  lib.rb  start-large.rb  start-small-rococo-with-two-parachains.rb  start-tiny-dev.rb  start-tiny-kusama.rb  start-tiny-polkadot.rb  start-tiny-rococo-with-contracts.rb  start-tiny-rococo-with-parachain.rb  start-tiny-rococo-with-statemint.rb  stop.rb
tools/: Cargo.toml
tools/monitor-memory/: Cargo.toml
tools/monitor-memory/src/: main.rs
tools/register-parachain/: Cargo.toml
tools/register-parachain/src/: main.rs
