[package]
name = "register-parachain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.34.0"
subxt-signer = { version = "0.34.0", default-features = false, features = ["sr25519", "native", "subxt"] }
tokio = { version = "1.36.0", features = ["full"] }
